--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 seeder:
-  - file: ./seeder/seeder.rb
-    disabled: true
+  file: ./seeder/seeder.rb
+  disabled: true
 
 parsers:
   - file: ./parsers/search.rb
